--- a/src/formularios/frmCompras.form
+++ b/src/formularios/frmCompras.form
@@ -676,6 +676,7 @@
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
       <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNomProdActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNomProdKeyTyped"/>
       </Events>
       <Constraints>
